--- a/css/style.css
+++ b/css/style.css
@@ -230,13 +230,15 @@ a:hover {
 	color: #fff;
 }
 
-.carousel-caption  p {
+.carousel-caption p {
 	font-size:30px;
 	margin-top:30px;
 	margin-bottom:20px;
-	color:#fff;
+	color: yellow;
 	padding:10px;
-	background:#80a287;
+  background:#80a287;
+  opacity: 0.6;
+  font-weight: bolder;
 }
 
 @media (max-width: 767px) {
